--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,10 @@
   }
 }
 
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -24,4 +28,37 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    scroll-behavior: smooth;
+}
+
+.navbar {
+  transition: all 0.5s;
+}
+
+.responsive {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: initial;
+}
+
+.responsive ul{
+  margin-top: 10%;
+  margin-left: 10%;
+}
+
+.responsive div{
+  margin-top: 8%;
+}
+
+.sidebar{
+  background: #0000007a;
+}
+
+@media screen {
+  .responsive {
+    top: -100%;
+    height: 0;
+    position: fixed;
+  }
 }
