--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -18,17 +18,11 @@
 
 html{
   scroll-behavior: smooth;
+  background: #000;
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-    scroll-behavior: smooth;
+background: #000;
 }
 
 .navbar {
